--- a/responsive.scss
+++ b/responsive.scss
@@ -98,7 +98,7 @@ $breakpoint-notre-métier:1200px;
 
         display:flex;
         flex-direction: column;
-
+        align-items: center;
         
         a{
             display: block;
