--- a/style.css
+++ b/style.css
@@ -146,6 +146,8 @@ h2 {
   cursor: pointer;
   border-style: none;
   font-weight: 700;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: scroll;
 }
 
 /* HEADER */
@@ -189,9 +191,11 @@ p {
 .a-postuler {
   display: flex;
   align-items: center;
+  display: inline-flex;
   width: 130px;
   height: 30px;
   margin: 0;
+  justify-content: center;
   font-weight: 700;
   cursor: pointer;
   border-radius: 50px;
@@ -456,6 +460,7 @@ input[type=checkbox]:checked + label {
     width: 250px;
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
   .menu a {
     display: block;
