--- a/style.scss
+++ b/style.scss
@@ -39,7 +39,7 @@ html, body {
     padding-top : 1em;
     font-size: 1.5em;
     text-align: center;
-    font-weight: 900;
+    // font-weight: 900;
     margin-top: 0;
   }
 
@@ -84,7 +84,6 @@ html, body {
     font-weight: 700;
 
     -webkit-overflow-scrolling: touch;
-    overflow-y: scroll;
   }
 
    /* HEADER */
