--- a/responsive.scss
+++ b/responsive.scss
@@ -30,6 +30,9 @@ $breakpoint-notre-métier:1200px;
     .header .header__img{
         float:inherit;   
     }
+    .header__img{
+        margin-right: 41px;  
+    }
    
     .body{
         display:block;
