--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,7 @@ html, body {
   
   h1 {
     padding-top : 1em;
-    font-size: 1.5em;
+    font-size: 1.9em;
     text-align: center;
     // font-weight: 900;
     margin-top: 0;
@@ -64,6 +64,9 @@ html, body {
   h2{
     font-size: 1.2em;
     font-weight: 800;
+  }
+  .Nm-titre-h1{
+    margin-bottom: -0.5em;
   }
 
   .button{
